Minor add to doc

--- a/astrogrid/datacenter/client/src/java/org/astrogrid/datacenter/delegate/package.html
+++ b/astrogrid/datacenter/client/src/java/org/astrogrid/datacenter/delegate/package.html
@@ -89,5 +89,8 @@ Nobody knows, not been implemented yet.
 <h4>Direct Delegates</h4>
 For colocated services; not been implemented yet.
 
+<h4>NVO Cone service Delegates</h4>
+For NVO http-post cone search servers.
+
 </body>
 </html>
