Some test files to give the services a quick shooing.

--- a/astrogrid/mySpace/src/webapp/index.html
+++ b/astrogrid/mySpace/src/webapp/index.html
@@ -331,6 +331,7 @@
          From here you can:
          <li> Browse the <a href="maven/index.html">Maven documentation</a>,
          <li> Check <a href="happyaxis.jsp">HappyAxis</a> to see if you've installed everything successfully, or
+         <li> Check <a href="happyMySpace.jsp">HappyMySpace</a> to see if you've installed MySpace successfully, or
          <li> See what <a href="servlet/AxisServlet">services</a> are available.
          <p>
          To install MySpace see the <a href="INSTALL">readme file</a> and the example <a href="ASTROGRID_myspaceserverconfig.xml">myspaceserver config file</a>/<a href="ASTROGRID_myspacemanagerconfig.xml">myspacemanager config file</a> which you need to edit and place
