The query form is available via a link from the welcome page.

--- a/astrogrid/warehouse/src/webapp/index.html
+++ b/astrogrid/warehouse/src/webapp/index.html
@@ -21,7 +21,16 @@ component.
 <p>
 The warehouse service is a SOAP service built on Apache-Axis, so it must be
 driven by a dedicated SOAP client (the classes in AstroGrid's data-centre
-component are suitable) rather than through these web pages.  However, Axis
+component are suitable) rather than through these web pages.  However, 
+AstroGrid provide this feature via your web browser as an aid to testing.
+</p>
+
+<ul>
+<li><a href="query-form.html">Run a synchronous ADQL-query.</a></li>
+</ul>
+
+<p>
+Axis
 provides the following administrative functions via your web browser.
 </p>
 
