New JES test page

--- a/astrogrid/jes/src/webapp/index.html
+++ b/astrogrid/jes/src/webapp/index.html
@@ -330,7 +330,8 @@
      
          From here you can:
          <li> Browse the <a href="maven/index.html">Maven documentation</a>,
-         <li> Check <a href="happyaxis.jsp">HappyAxis</a> to see if you've installed everything successfully, or
+         <li> Check <a href="happyaxis.jsp">HappyAxis</a> to see if you've installed everything successfully, 
+         <li> Check <a href="testJES.jsp">HappyJES</a> to see if you've installed JES successfully, or
          <li> See what <a href="servlet/AxisServlet">services</a> are available.
          <p>
          To install JES see the <a href="README">readme file</a> and the example <a href="ASTROGRID_jesconfig.xml">config file</a> which you need to edit and place
