Slight modifications to the createUserForm.jsp and deleteUserForm.jsp JSP pages and to index.html, the introductory Web page.

--- a/astrogrid/mySpace/src/webapp/index.html
+++ b/astrogrid/mySpace/src/webapp/index.html
@@ -68,10 +68,19 @@
           <div id="bodycol">
             <div class="app">
               <div class="h3">
-                <h3>
-                  <a name="AstroGrid MySpace">AstroGrid
-                  MySpace</a>
-                </h3>
+
+  <!-- Start customisation
+
+       Add any customised text for your MySpace here.
+
+       Typically you might add a title and perhaps an introductory
+       paragraph.  A h3 level header is recommended.
+    -->
+
+                <h3>AstroGrid MySpace</h3>
+
+  <!-- End customisation -->
+
                 <p>
                   From here you can:
                 </p>
