Revisions to the installation instructions and a few corresponding changes to some of the example files which these instructions refer to.

--- a/astrogrid/mySpace/src/webapp/index.html
+++ b/astrogrid/mySpace/src/webapp/index.html
@@ -79,6 +79,10 @@
 
                 <h3>AstroGrid MySpace</h3>
 
+                <p>
+                  This site is an AstroGrid MySpace service.
+                </p>
+
   <!-- End customisation -->
 
                 <p>
