--- a/astrogrid/mySpace/src/webapp/index.html
+++ b/astrogrid/mySpace/src/webapp/index.html
@@ -10,7 +10,7 @@
           @import url("maven/style/maven.css");
             </style>
     <link rel="stylesheet" href=
-    "maven/target/docs/style/print.css" type="text/css" media=
+    "maven/style/print.css" type="text/css" media=
     "print">
     <meta http-equiv="Content-Type" content=
     "text/html; charset=ISO-8859-1">
@@ -101,13 +101,16 @@
                   <li>
                     Check <a href=
                     "happyMySpace.jsp">HappyMySpace</a> to see if
-                    MySpace has installed successfully, or
+                    MySpace has installed successfully and configure it, or
                   </li>
                   <li>
                     See what <a href=
                     "functions.html">functions</a> are
                     available. 
                   </li>
+				  <li>
+				     View the <a href="servlet/AxisServlet">wsdl</a> for the web services.
+	              </li>
                 </ul>
                 <p>
                   To install the latest MySpace go to the <a href=
