--- a/astrogrid/mySpace/src/webapp/index.html
+++ b/astrogrid/mySpace/src/webapp/index.html
@@ -10,7 +10,7 @@
           @import url("maven/style/maven.css");
             </style>
     <link rel="stylesheet" href=
-    "maven/style/print.css" type="text/css" media=
+    "maven/target/docs/style/print.css" type="text/css" media=
     "print">
     <meta http-equiv="Content-Type" content=
     "text/html; charset=ISO-8859-1">
@@ -91,7 +91,7 @@
                 <ul class="noindent">
                   <li>
                     Browse the <a href=
-                    "maven/target/docs/index.html">Maven
+                    "maven/index.html">Maven
                     documentation</a> for this release,
                   </li>
                   <li>
@@ -108,9 +108,6 @@
                     "functions.html">functions</a> are
                     available. 
                   </li>
-				  <li>
-				     View the <a href="servlet/AxisServlet">wsdl</a> for the web services.
-	              </li>
                 </ul>
                 <p>
                   To install the latest MySpace go to the <a href=
