This page is now valid XHTML.

--- a/astrogrid/warehouse/src/webapp/query-form.html
+++ b/astrogrid/warehouse/src/webapp/query-form.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html>
 
 <head>
 <title>AstroGrid data-warehouse query form</title> 
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></meta>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
 </head>
 
 <body>
 
-<h1><a name="Submit an ADQL Query">Submit an ADQL Query</a></h1>
-<form action="process-form.jsp" method="POST">
+<h1>Submit an ADQL Query</h1>
+<form action="process-form.jsp" method="post">
 <textarea name="query" rows="20" cols="60">
 </textarea>
 <br/>
-<input type="submit" value="Run Query">
-</input>   
+<input type="submit" value="Run Query"/>
 </form>
 
 <p>
