If I didn't work on this file in about ten different places I probably wouldn't get this confused.

--- a/astrogrid/mySpace/src/webapp/index.html
+++ b/astrogrid/mySpace/src/webapp/index.html
@@ -10,7 +10,7 @@
           @import url("maven/style/maven.css");
             </style>
     <link rel="stylesheet" href=
-    "maven/target/docs/style/print.css" type="text/css" media=
+    "maven/style/print.css" type="text/css" media=
     "print">
     <meta http-equiv="Content-Type" content=
     "text/html; charset=ISO-8859-1">
@@ -108,6 +108,9 @@
                     "functions.html">functions</a> are
                     available. 
                   </li>
+				  <li>
+				     View the <a href="servlet/AxisServlet">wsdl</a> for the web services.
+	              </li>
                 </ul>
                 <p>
                   To install the latest MySpace go to the <a href=
