--- a/astrogrid/datacenter/client/src/java/org/astrogrid/datacenter/axisdataserver/types/package.html
+++ b/astrogrid/datacenter/client/src/java/org/astrogrid/datacenter/axisdataserver/types/package.html
@@ -3,7 +3,9 @@
 		<h1>SOAP-y Beans</h1>
 		This package contains data beans that are transported via SOAP between client and server.
 		The sources are generated from the wsdl and xsd files by the <tt>wsdl2java</tt> tool.
-		Most important is the {@link org.astrogrid.datacenter.axisdataserver.types._query} class, which 
-		encapuslates a query to the server.
+		<p>
+		Most important is the {@link org.astrogrid.datacenter.axisdataserver.types.Query} class, which
+		encapuslates a query to the server. The class {@link org.astrogrid.datacenter.axisdataserver.types.QueryHelper}
+		provides static methods to assist in building <tt>Query</tt> objects.
 	</body>	
 </html>
