Changes to allow an existing file to be overwritten when a new file is imported into MySpace by either (i) passing the file contents as a string of (ii) passing a URL to readit from.

--- a/astrogrid/mySpace/src/webapp/functions.html
+++ b/astrogrid/mySpace/src/webapp/functions.html
@@ -111,6 +111,10 @@ can, of course, substitute your own values if you wish.
    contents</a>,
   </li>
 
+  <li> <a href="importUrlForm.jsp">import a file by supplying a
+   URL</a>,
+  </li>
+
   <li> <a href="exportContentsForm.jsp">export the contents of a file</a>,
   </li>
 
