--- a/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/queriers/sybase/package.html
+++ b/astrogrid/datacenter/server/src/java/org/astrogrid/datacenter/queriers/sybase/package.html
@@ -1,7 +1,9 @@
 <html>
 <body>
-Querier implementation for Sybase DB
---
-reverse engineered from the existing Query classes.
+<h1>Backend implementation for Sybase DB</h1>
+
+Extends the vanilla backend in {@link org.astrogrid.datacenter.queriers.sql}
+and overrides some of the translation rules to handle peculiarities in Sybase syntax.
+These were reverse engineered from the Iteration02 Query classes.
 </body>
 </html>
